plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.9.4'
}

group 'com.ruslooob'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.7.1'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.ruslooob'
    mainClass = 'com.ruslooob.Application'
}

javafx {
    version = '17.0.0.1'
    modules = ['javafx.controls']
}
/*
simple exe - jpackage --type exe --input . --dest . --main-jar '.\Just Todo It-1.0-SNAPSHOT.jar' --main-class com.ruslooob.App --module-path "C:\Users\Ruslan\javafx-jmods-18.0.2" --add-modules javafx.controls --win-shortcut --win-menu
exe with inner packed virtual machine jpackage --type exe --input . --dest . --main-jar '.\Just Todo It-1.0-SNAPSHOT.jar' --main-class com.ruslooob.App --module-path "C:\Users\Ruslan\javafx-jmods-18.0.2" --add-modules javafx.controls --win-shortcut --win-menu --name "Just Todo It" --jlink-options --bind-services
todo fix problem process exited with code 1
*/
jlink {
    launcher {
        name = 'hellofx'
    }
}

dependencies {
    implementation group: 'org.kordamp.ikonli', name: 'ikonli-core', version: '12.3.1'
    implementation group: 'org.kordamp.ikonli', name: 'ikonli-javafx', version: '12.3.1'
    implementation group: 'org.kordamp.ikonli', name: 'ikonli-fontawesome-pack', version: '12.3.1'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.3'


    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

configurations.all {
    resolutionStrategy {
        failOnVersionConflict()
    }
}

test {
    useJUnitPlatform()
}